2013-04-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  STM8: Disable generation of jump tables.

2013-04-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Endianness fixes, implement dummy pointer reads, implement '!', implement more operands in logic ops, implement more return operands, implement more operands for cast to _Bool, implement more operands for subtraction.

2013-04-18 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic14/libdev/mkall.sh,
	  device/examples/mcs51/simple/test,
	  device/examples/mcs51/simple/go,
	  device/examples/mcs51/simple2/go,
	  device/examples/mcs51/simple2/test,
	  sim/ucsim/conf:
	  use /bin/sh instead of /bin/bash to enable compilation on OpenBSD

2013-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix for cast to bool.

2013-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Implement more shifts, unary minus for float, implement large return values, save regs over calls, coalescing.

2013-04-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fix emission of rlwa, fix 16-bit increment with result in x, operand not in x.

2013-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Fixes for reading / writing through pointer, implement more IFX, fix wide subtraction and compariosn.

2013-04-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  STM8: Now that we know more about sp-manipulation, we can do it smarter.

2013-04-14 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl:
	  The overlapped block and instruction it is no longer a fatal error.

2013-04-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  STM8: Applied patch from Valentin Dudouyt to set default code loc.
	* src/stm8/gen.c:
	  STM8: Be more cautious about arithmetic on stack pointer.

2013-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglobl.h,
	  src/SDCCglue.c,